@@ -4,6 +4,12 @@
 
 	- Added CUDA support with Matlab.
 
+	* matlab/FiltersToolbox/Deconvolve.cpp:
+	* matlab/FiltersToolbox/deconvolve.m:
+
+	- Edit help header to note that the CUDA implementation is now
+	available.
+
 	* CMakeLists.txt:
 
 	- Select gcc v4.4 automatically if we want to compile Clarity with
